@@ -6,32 +6,37 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
- * Configuración de CORS para permitir solicitudes desde los frontends autorizados.
- * Define orígenes, métodos y headers permitidos.
+ * Configuración CORS del API Gateway.
+ * Permite solicitudes desde los frontends autorizados hacia el Gateway.
  */
 @Configuration
 public class CorsConfig {
 
-    /**
-     * Configura el filtro CORS para permitir solicitudes desde los orígenes configurados.
-     * Define métodos permitidos, headers explícitos y soporte para credenciales.
-     *
-     * @return filtro CORS configurado
-     */
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedOrigins(Arrays.asList(
+
+        corsConfig.setAllowedOrigins(List.of(
                 "http://localhost:5173",
                 "http://localhost:3000",
-                "http://localhost:8080",
                 "http://127.0.0.1:5173"
         ));
-        corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        corsConfig.setAllowedHeaders(Arrays.asList("Content-Type", "X-Usuario", "X-Usuario-Rol", "X-Request-ID"));
+
+        corsConfig.setAllowedMethods(List.of(
+                "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+        ));
+
+        corsConfig.setAllowedHeaders(List.of(
+                "Content-Type",
+                "Authorization",
+                "X-Usuario",
+                "X-Usuario-Rol",
+                "X-Request-ID"
+        ));
+
         corsConfig.setAllowCredentials(true);
         corsConfig.setMaxAge(3600L);
 
